--- a/src/plugins/contract_block/styles.css
+++ b/src/plugins/contract_block/styles.css
@@ -3,10 +3,6 @@
 	border-radius: 5px;
 }
 
-.contract-block:before {
-	content: attr(block_group);
-}
-
 .contract-block-dotted {
 	border: 2px solid black;
 	border-radius: 5px;
@@ -21,4 +17,16 @@
 
 .contract-section {
 	border: 5px solid rebeccapurple;
+}
+
+.contract-block:before {
+	content: attr(block_group);
+}
+
+.contract-block-dotted:before {
+	content: attr(block_group);
+}
+
+.contract-block_focused:before {
+	content: attr(block_group);
 }
