update code & update version

--- a/src/plugins/ckeditor5-table/src/converters/styles.css
+++ b/src/plugins/ckeditor5-table/src/converters/styles.css
@@ -1,9 +1,9 @@
 .table {
-	border: 1px solid black;
+	border: 1px solid black !important;
 	border-collapse: collapse;
 }
 
 .table-cell {
-	border: 1px solid black;
-	min-width: 100px;
+	border: 1px solid black !important;
+	min-width: 60px;
 }
